--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {},
+  "dependencies": {
+	  "lodash": ">=2.4.1"
+  },
   "devDependencies": {
     "karma": "~0.11.9",
     "karma-chrome-launcher": "~0.1.2",
