--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "lodash.deep",
-  "main": "lodash.deep.js",
-  "version": "1.0.2",
-  "homepage": "https://github.com/marklagendijk/lodash.deep",
+  "name": "lodash-deep",
+  "main": "lodash-deep.js",
+  "version": "1.1.0",
+  "homepage": "https://github.com/marklagendijk/lodash-deep",
   "authors": [
     "Mark Lagendijk <mark@lagendijk.info>"
   ],
