--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lodash.deep",
-  "version": "1.0.2",
+  "name": "lodash-deep",
+  "version": "1.1.0",
   "description": "Lodash mixins for (deep) object accessing / manipulation.",
-  "main": "lodash.deep.js",
+  "main": "lodash-deep.js",
   "directories": {
     "test": "test"
   },
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/marklagendijk/lodash.deep.git"
+    "url": "https://github.com/marklagendijk/lodash-deep.git"
   },
   "keywords": [
     "lodash",
@@ -36,7 +36,7 @@
   "author": "Mark Lagendijk <mark@lagendijk.info>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/marklagendijk/lodash.deep/issues"
+    "url": "https://github.com/marklagendijk/lodash-deep/issues"
   },
-  "homepage": "https://github.com/marklagendijk/lodash.deep"
+  "homepage": "https://github.com/marklagendijk/lodash-deep"
 }
