--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "karma-chrome-launcher": "~0.1.2",
     "karma-jasmine": "~0.1.5"
   },
+  "engines": {
+    "node": ">=0.8.0",
+    "npm": ">=1.2.10"
+  },
   "scripts": {
     "test": "jasmine-node ./test/lodashDeepSpec.js"
   },
