--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lodash": ">=2.4.1"
   },
   "devDependencies": {
-    "gulp": "~3.3.0",
-    "gulp-karma": "0.0.1",
-    "gulp-rename": "~0.2.1",
-    "gulp-uglify": "~0.1.0",
-    "jasmine-node": "^1.14.5",
-    "karma": "~0.11.9",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-jasmine": "~0.1.5"
+    "gulp": "~3.8.8",
+    "gulp-jasmine": "^1.0.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~1.0.1",
+    "karma": "~0.12.23",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-sauce-launcher": "^0.2.10"
   },
   "engines": {
     "node": ">=0.8.0",
     "npm": ">=1.2.10"
   },
   "scripts": {
-    "test": "jasmine-node ./test/lodashDeepSpec.js"
+    "test": "gulp test-node"
   },
   "repository": {
     "type": "git",
