--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
+
 node_js:
-  - "0.10"
   - "0.11"
+
+env:
+  global:
+  - SAUCE_USERNAME=marklagendijk
+  - SAUCE_ACCESS_KEY=191cf3d7-894f-442f-bb19-dd263f897b17
+
 before_install:
   - currentfolder=${PWD##*/}
   - if [ "$currentfolder" != 'lodash-deep' ]; then cd .. && eval "mv $currentfolder lodash-deep" && cd lodash-deep; fi
+  - npm install -g bower
+  - bower install
