--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "gulp": "~3.8.8",
-    "gulp-jasmine": "^1.0.1",
+    "gulp-jasmine": "^2.3.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.0.1",
-    "karma": "~0.12.23",
-    "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-sauce-launcher": "^0.2.10"
+    "karma": "0.13.21",
+    "karma-jasmine": "0.3.7",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-sauce-launcher":  "0.3.1"
   },
   "engines": {
     "node": ">=0.8.0",
