--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "dependencies": {
-    "lodash": ">=3.7.0"
+    "lodash": "^4.13.1"
   },
   "devDependencies": {
     "gulp": "~3.8.8",
