--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/marklagendijk/lodash-deep.git"
+    "url": "https://github.com/S4RB/lodash-deep.git"
   },
   "keywords": [
     "lodash",
@@ -41,7 +41,7 @@
   "author": "Mark Lagendijk <mark@lagendijk.info>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/marklagendijk/lodash-deep/issues"
+    "url": "https://github.com/S4RB/lodash-deep/issues"
   },
-  "homepage": "https://github.com/marklagendijk/lodash-deep"
+  "homepage": "https://github.com/S4RB/lodash-deep"
 }
